--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
         "laravel/tinker": "^2.10.1",
         "laravel/ui": "^4.6",
         "livewire/flux": "^2.0",
-        "livewire/volt": "^1.7.0"
+        "livewire/volt": "^1.7.0",
+        "spatie/laravel-medialibrary": "^11.13",
+        "spatie/laravel-permission": "^6.19",
+        "sweetalert2/laravel": "^0.1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
